--- a/moban1002/error.html
+++ b/moban1002/error.html
@@ -12,7 +12,7 @@
      <!-- PAGE LEVEL STYLES-->
     <link href="assets/css/error.css" rel="stylesheet" />
     <!-- GOOGLE FONTS-->
-    <link href='http://fonts.useso.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+    <link href='assets/css/font-family.css?family=Open+Sans' rel='stylesheet' type='text/css' />
 
 </head>
 <body>
