--- a/moban1002/login.html
+++ b/moban1002/login.html
@@ -10,7 +10,7 @@
     <!-- FONTAWESOME STYLES-->
     <link href="assets/css/font-awesome.css" rel="stylesheet" />
     <!-- GOOGLE FONTS-->
-    <link href='http://fonts.useso.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+    <link href='assets/css/font-family.css?family=Open+Sans' rel='stylesheet' type='text/css' />
 
 </head>
 <body style="background-color: #E2E2E2;">
